# githubpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindCPR.cmake
include/githubpp/: github.hpp
src/: CMakeLists.txt  github.cpp
tests/: CMakeLists.txt  test_get.cpp
